examples/test/testpolicy17485.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17485
  namespace: namespace406
spec:
  podSelector:
    matchLabels:
      key15: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value13
          key28: value40
      podSelector:
        matchLabels:
          key39: value18
          key47: value29
          key10: value46
